--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "^15.6.0-canary.20",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
